--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,23 @@
 {
-    "cSpell.words": [
-        "Knott",
-        "camelcase",
-        "deepmerge",
-        "dimgray",
-        "hacs",
-        "hass",
-        "homeassistant",
-        "jayknott",
-        "listbox",
-        "markdownlint",
-        "nowrap",
-        "serveopts",
-        "stylelint",
-        "tabindex",
-        "typecheck"
-    ],
-    "editor.formatOnSave": true
+  "cSpell.words": [
+      "Knott",
+      "camelcase",
+      "deepmerge",
+      "dimgray",
+      "hacs",
+      "hass",
+      "homeassistant",
+      "jayknott",
+      "listbox",
+      "markdownlint",
+      "nowrap",
+      "serveopts",
+      "stylelint",
+      "tabindex",
+      "typecheck"
+  ],
+  "editor.formatOnSave": true,
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
