--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,21 @@
 {
   "cSpell.words": [
-      "Knott",
-      "camelcase",
-      "deepmerge",
-      "dimgray",
-      "hacs",
-      "hass",
-      "homeassistant",
-      "jayknott",
-      "listbox",
-      "markdownlint",
-      "nowrap",
-      "serveopts",
-      "stylelint",
-      "tabindex",
-      "typecheck"
+    "Knott",
+    "camelcase",
+    "deepmerge",
+    "dimgray",
+    "hacs",
+    "hass",
+    "homeassistant",
+    "jayknott",
+    "listbox",
+    "markdownlint",
+    "nowrap",
+    "serveopts",
+    "stylelint",
+    "tabindex",
+    "typecheck",
+    "unsub"
   ],
   "editor.formatOnSave": true,
   "[typescript]": {
