--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,9 @@
 {
-  "singleQuote": true,
-  "jsxsingleQuote": false,
+  "semi": true,
   "trailingComma": "all",
+  "singleQuote": true,
+  "printWidth": 120,
+  "tabWidth": 2,
   "overrides": [
     {
       "files": ".editorconfig",
